<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_detail_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_detail_from_sym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_slash"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_logo"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tv_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/slash"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_to_sym"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_from_sym"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_logo" />

    <TextView
        android:id="@+id/tv_detail_to_sym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_logo"
        app:layout_constraintStart_toEndOf="@+id/tv_slash"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_logo"
        tools:text="USD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_from_sym">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_min_per_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_per_day"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_max_per_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_per_day"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_last_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_market"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>